# FileSystemSimulator

./: README.md  voice_status.txt
backend/: CMakeCache.txt  CMakeLists.txt  auth.cpp  auth.h  globals.cpp  globals.h  main.cpp  voice_control.py  voice_status.txt
frontend/: .env  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  api.js  app.js  index.css
frontend/src/components/: FileExplorer.css  FileExplorer.js  Login.css  Login.js  Register.js  Terminal.css  Terminal.js
